# Overclock

./: About.cpp  About.h  CMakeLists.txt  Global.cpp  Global.h  Information.cpp  Information.h  Monitor.cpp  Monitor.h  Thread.cpp  Thread.h  ThreadTempCPU.cpp  ThreadTempCPU.h  Window.cpp  Window.h  main.cpp  test.cpp  test.h
resources/: resources.qrc
src/: resources.qrc
src/HEADERS/: About.h  Thread.h
src/SOURCES/: About.cpp  Global.cpp  Thread.cpp  Window.cpp
